; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/netcfgx/extr_tcpipconf_notify.c_DisplayError.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/netcfgx/extr_tcpipconf_notify.c_DisplayError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@netcfgx_hInstance = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DisplayError(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca [300 x i32], align 16
  %9 = alloca [100 x i32], align 16
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* @netcfgx_hInstance, align 4
  %11 = load i32, i32* %5, align 4
  %12 = getelementptr inbounds [300 x i32], [300 x i32]* %8, i64 0, i64 0
  %13 = call i64 @LoadStringW(i32 %10, i32 %11, i32* %12, i32 300)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = getelementptr inbounds [300 x i32], [300 x i32]* %8, i64 0, i64 299
  store i32 0, i32* %16, align 4
  br label %19

17:                                               ; preds = %3
  %18 = getelementptr inbounds [300 x i32], [300 x i32]* %8, i64 0, i64 0
  store i32 0, i32* %18, align 16
  br label %19

19:                                               ; preds = %17, %15
  %20 = load i32, i32* @netcfgx_hInstance, align 4
  %21 = load i32, i32* %6, align 4
  %22 = getelementptr inbounds [100 x i32], [100 x i32]* %9, i64 0, i64 0
  %23 = call i64 @LoadStringW(i32 %20, i32 %21, i32* %22, i32 100)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %19
  %26 = getelementptr inbounds [100 x i32], [100 x i32]* %9, i64 0, i64 99
  store i32 0, i32* %26, align 4
  br label %29

27:                                               ; preds = %19
  %28 = getelementptr inbounds [100 x i32], [100 x i32]* %9, i64 0, i64 0
  store i32 0, i32* %28, align 16
  br label %29

29:                                               ; preds = %27, %25
  %30 = getelementptr inbounds [300 x i32], [300 x i32]* %8, i64 0, i64 0
  %31 = getelementptr inbounds [100 x i32], [100 x i32]* %9, i64 0, i64 0
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @MessageBoxW(i32* null, i32* %30, i32* %31, i32 %32)
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i64 @LoadStringW(i32, i32, i32*, i32) #1

declare dso_local i32 @MessageBoxW(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
